exports[`(.not).toHaveResetContentStatus > using axios > .not.toHaveResetContentStatus > fails when response have status code 205 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveResetContentStatus()</intensity>

Expected status code to not be 205 received:
  <red>205</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 205,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveResetContentStatus > using axios > .toHaveResetContentStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveResetContentStatus()</intensity>

Expected status code to be 205 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveResetContentStatus > using got > .not.toHaveResetContentStatus > fails when response have status code 205 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveResetContentStatus()</intensity>

Expected status code to not be 205 received:
  <red>205</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 205,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveResetContentStatus > using got > .toHaveResetContentStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveResetContentStatus()</intensity>

Expected status code to be 205 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
